@@ -1,6 +1,0 @@
-/*! \file svdreport.h
- * \brief Aggregate User Statistics module.
- *
- * $Id$
- *
- */
